[tool.poetry]
name = "introduction-llm"
version = "0.1.0"
description = ""
authors = ["Timo Siebenand <timosiebenand@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
nltk = "^3.8.1"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
datasets = "^2.19.1"
torch = "^2.3.0"
transformers = "^4.41.1"
trl = "^0.8.6"
peft = "^0.11.1"
sentence-transformers = "^3.0.0"
tiktoken = "^0.7.0"
mistralai = "^0.3.0"
sentencepiece = "^0.2.0"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
